<resources>
    <string name="app_name">TrashApp</string>

    <string name="loginnim">Username</string>
    <string name="loginpassword">Password</string>
    <string name="login">Login</string>
    <string name="tulisantrash">Trash Can</string>
    <string name="loginGuest">Belum punya akun? Daftar</string>
    <string name="daftarnama">Nama</string>
    <string name="daftarusername">Username</string>
    <string name="daftarpassword">Password</string>
    <string name="daftar">Daftar</string>
    <string name="kembali">Kembali</string>
    <string name="punyaakun">Sudah Punya akun? Login</string>
    <string name="Remember">Remember</string>
    <string name="forgot">Lupa Password?</string>
    <string name="loginemail">Email</string>
    <string name="daftaremail">Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loginTamu">Login sebagai Tamu</string>
    <string name="daftaralamat">Alamat</string>
    <string name="daftarkodepos">Kode Pos</string>
    <string name="daftarNomerTelpon">Nomer Telpon</string>
    <string name="buy">Pesan</string>
</resources>
