<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/splashgambar">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        tools:context=".ui.LoginActivity">

        <RelativeLayout
            android:id="@+id/rv_login_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/cv_login_logo"
                android:layout_height="170dp"
                android:layout_width="170dp"
                android:layout_centerHorizontal="true"
                android:foregroundGravity="top"
                android:padding="10dp"
                android:src="@drawable/image"/>

            <LinearLayout
                android:id="@+id/ll_login_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="180dp"
                android:background="@drawable/background_edittext"
                android:orientation="vertical"
                android:padding="18dp">

                <EditText
                    android:id="@+id/et_login_username"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/background_edittext"
                    android:hint="@string/loginemail"
                    android:fontFamily="@font/gothamlight"
                    android:textColorHint="@android:color/black"
                    android:inputType="textEmailAddress"
                    android:paddingTop="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="14dp"/>

                <EditText
                    android:id="@+id/et_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/background_edittext"
                    android:hint="@string/loginpassword"
                    android:fontFamily="@font/gothamlight"
                    android:textColorHint="@android:color/black"
                    android:inputType="textPassword"
                    android:paddingTop="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="14dp"/>

                <Button
                    android:id="@+id/btn_login_login"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_below="@+id/et_login_password"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/background_button"
                    android:textColor="@android:color/white"
                    android:text="@string/login"
                    android:fontFamily="@font/gothammedium"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textSize="15sp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/cb_login_remember"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Remember"/>

                    <TextView
                        android:id="@+id/tv_login_forgot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_marginLeft="80dp"
                        android:layout_toRightOf="@id/cb_login_remember"
                        android:text="@string/forgot"
                        android:textColor="#000000" />
                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_login_daftar"
            android:layout_marginTop="38dp"
            android:layout_marginBottom="38dp"
            android:layout_below="@+id/rv_login_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/gothammedium"
            android:textColor="@android:color/white"
            android:text="@string/loginGuest"/>
    </RelativeLayout>

</ScrollView>
